<resources>
    <string name="app_name">IrrigationApp</string>
    <string name="action_settings">Settings</string>
    <string name="pre">Preliminary Design</string>
    <string name="dnt">net depth</string>
    <string name="fc">Available Moisture mm/m</string>
    <string name="ha">ha</string>
    <string name="KR">Crop Factor Kr</string>
    <string name="rz">RZD in meters</string>
    <string name="dep">MAD in %</string>
    <string name="comp">Compute</string>
    <string name="ans">Answer</string>
    <string name="ns">Next Step</string>
    <string name="lperday">L/day</string>
    <string name="FT">Field type</string>
    <string name="reg">Regular</string>
    <string name="irr">Irregular</string>
    <string name="ram">Available Moisture in mm/m</string>
    <string name="depfactor">Moisture Depletion Factor in %</string>
    <string name="AM">Readily Available Moisture </string>
    <string name="Netper3"> Net irrigation per tree</string>
    <string name="freqpeak">Irrigation frequency at peak demand</string>
    <string name="days">days</string>
    <string name="diameter">Enter available diameters separated by comma </string>
    <string name="manual">Select Manual</string>
    <string name="submit">Submit</string>
    <string name="dripm">Drip Manual</string>
    <string name="FD">Enter Field Dimensions</string>
    <string name="discharge">Discharge of Emitter Per Hour</string>
    <string name="next">Next</string>
    <string name="rb1">use field data</string>
    <string name="em">emitters</string>
    <string name="litre">L/day/tree</string>
    <string name="litper3">L/tree</string>
    <string name="Sprbtn">Sprinkler Manual</string>
    <string name="rb2">use Lit data</string>
    <string name="fdb">Field data</string>
    <string name="ldb">Lit data</string>
    <string name="litdata">Design with Lit data</string>
    <string name="am2">AM</string>
    <string name="sc">Soil Category</string>
    <string name="ems">emitters</string>
    <string name="NumOf">No. of emitters</string>
    <string name="NEP">Emitters Per Plant</string>
    <string name="NP">emitters</string>
    <string name="adjustTa">Adjust pressure</string>
    <string name="mad">MAD</string>
    <string name="cp">compute</string>
    <string name="as">Answer</string>
    <string name="nt">NEXT</string>
    <string name="epp">Emitter per plant</string>
    <string name="IF">Irrigation Frequency</string>
    <string name="dnet">Net depth</string>
    <string name="fre">water use</string>
    <string name="bcomp">Compute</string>
    <string name="gr">Gross depth</string>
    <string name="eff">Efficiency</string>
    <string name="adj">Adjusted Percentage Pw in %</string>
    <string name="pressure">Adjust Set Time</string>
    <string name="copyryt">Copyright \u00a9 2017, Ahmed and Alfred</string>
    <string name="W">wetted Area</string>
    <string name="ww">Wetted Width</string>
    <string name="Sp">distance between the plants within a row</string>
    <string name="Sr">Row spacing</string>
    <string name="dt">Net depth</string>
    <string name="sys">System Capacity</string>
    <string name="area">Area</string>
    <string name="dgross">dgross</string>
    <string name="ET">ET</string>
    <string name="irrc">Irr. Cycle</string>
    <string name="shift">No. of Shift</string>
    <string name="time">time per shift</string>
    <string name="IrrFreq">Irr. Freq</string>
    <string name="prebtn">Previous</string>
    <string name="GrossDepth">Gross Depth</string>
    <string name="bnext">NEXT</string>
    <string name="metres">M</string>
    <string name="lateraldia">Available diameter(mm) 12,16,20,25,32,40</string>
    <string name="manifold">Available diameter(mm) 30, 65, 75, 90, 110</string>
    <string name="mainline">Available diameter(mm) 110, 125, 140</string>
    <string name="mainline2">Available diameter(mm) 110, 125, 140, 200, 250</string>
    <string name="space">Emitter Spacing</string>
    <string name="DBtnPL">distance between plants in m</string>
    <string name="vol">Capacity</string>
    <string name="Farea">Field Area</string>
    <string name="settime">Set Time (Ts)</string>
    <string name="gr1">Gross 2</string>
    <string name="emitters">Num of Emitters</string>
    <string name="fra">design with field data</string>
    <string name="mm">mm</string>
    <string name="adjust">Adjust the Pw to the desired Pw</string>
    <string name="newEm">New emitter spacing</string>
    <string name="nww">New wetted width</string>
    <string name="PV">Pressure Variation</string>7
    <string name="EU">Emission Uniformity EU</string>
    <string name="CV">Coefficient of Variation CV </string>
    <string name="newnumofem">New numbers of emitters</string>
    <string name="AV">Average Discharge</string>
    <string name="disch">qa</string>
    <string name="mini">Min Discharge</string>
    <string name="qm">qm</string>
    <string name="headm"> Minimum Head</string>
    <string name="expo">Emitter Exponent, x</string>
    <string name="head">Pressure Head, Ha in Metres</string>
    <string name="miniH">Min Head</string>
    <string name="allowable"> Allowable Variation</string>
    <string name="Phead">Pressure Head</string>
    <string name="Hm">Hm</string>
    <string name="selecting">Select the appropriate diameter</string>
    <string name="dia">Enter the candidate diameters</string>
    <string name="compHf">Compute Head losses</string>
    <string name="EL">Enter the Length</string>
    <string name="numOfPlant">Number of Plant per row</string>
    <string name="plants">plants</string>
    <string name="laterals">Number of emitters per laterals</string>
    <string name="dischperlateral">Discharge per lateral</string>
    <string name="Dis">Enter Discharge per Lateral</string>
    <string name="delta"><![CDATA[&Delta;]]></string>
    <string name="select">Sprinkler Selection</string>
    <string name="rate">Enter infiltration rate</string>
    <string name="spDiameter">Available diameters[mm]: 63, 76, 102, 127 </string>
    <string name="info">About</string>
    <string name="about">
        The irrigation design application is a tool that is meant to simplify the design procedures of
        irrigation system. You can do your design calculation whether you’re in office or in the field. The app has input
        and output futures. The design steps and equations required are also embedded in the app and
        therefore you don’t need to struggle in remembering all the formulas. Similarly, the tables for
        constants are also put in a database and you can easily retrieve.

    </string>
    <string name="turnoverRate">m<sup>3</sup>/hour:</string>
    <string-array name="effciency">

        <item>0.95</item>
        <item>0.90</item>
        <item>0.85</item>
        <item>0.80</item>
        <item>0.75</item>
        <item>0.70</item>
        <item>0.65</item>
    </string-array>

    <string-array name="Kr">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.75</item>
        <item>0.8</item>
        <item>0.85</item>
        <item>0.9</item>
        <item>0.95</item>
    </string-array>

    <string-array name="position">

        <item>center</item>
        <item>side</item>



    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_d_field">D_field</string>
    <string name="title_activity_navigation">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
