<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.meedy.irrigationapp.Pdesignfragment1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/fra"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:textColor="#2b0909"
        android:id="@+id/pre"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dnt"
        android:textSize="20sp"
        android:textColor="#2b1010"
        android:id="@+id/tv2"
        android:layout_above="@+id/ed1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:id="@+id/ed1"
        android:text="@string/fc"
        android:hint="@string/fc"
        android:layout_above="@+id/ed2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:id="@+id/ed2"
        android:hint="@string/rz"
        android:layout_above="@+id/ed3"
        android:layout_alignRight="@+id/ed1"
        android:layout_alignEnd="@+id/ed1" />

    <EditText
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:id="@+id/ed3"
        android:hint="@string/dep"
        android:layout_above="@+id/bt4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp"
        android:textColor="#2b0909"
        android:id="@+id/bt4"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ed3"
        android:layout_toEndOf="@+id/ed3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed4"
        android:hint="@string/ans"
        android:textColor="#2b0909"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/bt4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/tv2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed1"
        android:layout_alignEnd="@+id/ed1"
        android:layout_above="@+id/ed1" />




</RelativeLayout>
