<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FT"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#2b0909"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textSize="15sp"
        android:id="@+id/CB1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irr"
        android:textSize="15sp"
        android:id="@+id/CB2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FD"
        android:textColor="#2b0909"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="150dp"
        android:hint="length"
        android:layout_height="wrap_content"
        android:id="@+id/len" />

    <EditText
        android:layout_width="150dp"
        android:hint="width"
        android:layout_height="wrap_content"
        android:id="@+id/wid" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/bnxt"
       android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>