<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual"
        android:textColor="#2b0909"
        android:id="@+id/sm"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sprbtn"
        android:id="@+id/sprinkbtn"
        android:textColor="#2b0909"
        android:layout_below="@+id/sm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dripm"
        android:id="@+id/dripbtn"
        android:textColor="#2b0909"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/sprinkbtn"
        android:layout_alignEnd="@+id/sprinkbtn"
        android:layout_alignLeft="@+id/sprinkbtn"
        android:layout_alignStart="@+id/sprinkbtn" />
</RelativeLayout>
